corrigir controller usuario