@@ -2,6 +2,7 @@ package br.ufscar.dc.dsw.Trabalho2.security;
 
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -13,7 +14,7 @@ import br.ufscar.dc.dsw.Trabalho2.models.Usuario;
 @SuppressWarnings("serial")
 public class UsuarioDetails implements UserDetails {
 
-	private Usuario usuario;
+	private final Usuario usuario;
     
     public UsuarioDetails(Usuario usuario) {
         this.usuario = usuario;
@@ -22,7 +23,7 @@ public class UsuarioDetails implements UserDetails {
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         SimpleGrantedAuthority authority = new SimpleGrantedAuthority(usuario.getTipo());
-        return Arrays.asList(authority);
+        return List.of(authority);
     }
 
 	@Override
